# game-for-studying-practise

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
MapMaker/: MapMaker.sln
MapMaker/MapMaker/: MapMaker.vcxproj  MapMaker.vcxproj.filters  Source.txt  main.cpp  map.txt
StudyGame/: AnimationData.h  App.cpp  App.h  AppState.h  BaseBlockPresenter.h  BaseEntityPresenter.h  BaseFloorPresenter.h  BaseWeaponPresenter.h  Block.h  CMakeLists.txt  Character.cpp  Character.h  CharactersManager.h  ComputerController.h  EnemyPresenter.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  GameScene.cpp  GameScene.h  GameUI.h  IBlockPresenter.h  IController.h  IEntityPresenter.h  IFloorPresenter.h  IScene.h  ISpritePresenter.h  IWeaponPresenter.h  InputManager.h  MenuScene.cpp  MenuScene.h  PhysicsEngine.cpp  PhysicsEngine.h  Rect.cpp  Rect.h  ResourceManager.h  RigidBody.h  SceneManager.cpp  SceneManager.h  (+9 more)
assets/Maps/: map.txt  map1.txt
diagrams/: StartDiagram.puml
game for studying practise/: CMakeLists.txt  game for studying practise.cpp  game for studying practise.h
